# polygon

./: .gitignore  README.md  pyproject.toml
polygon/: run.py
polygon/utils/: custom_scoring_fcn.py  train_ligand_binding_model.py  utils.py
polygon/vae/: vae_model.py  vae_trainer.py
scripts/: assess_model.py  prepare_filtered_dataset.py  tune_hyperparameters.py  visualize_embeddings.py
